# webquills

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  TODO.md  compose.yml  dev-requirements.txt  example.env  manage.py  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  run  tox.ini
.github/: coplot-instructions.md
.github/workflows/: release.yml  test.yml  test_suite.yml
posh/: apps.py
posh/static/css/: posh_base.css
posh/templates/posh/: base.html
requirements/: pip-dev.txt
sitesadmin/: admin.py
templates/account/: account_inactive.html  base.html  email.html  email_confirm.html  login.html  logout.html  password_change.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  password_set.html  signup.html  signup_closed.html  verification_sent.html  verified_email_required.html
user_manual/: mkdocs.yml
user_manual/docs/: index.md
webquills/: _version.py  allauth_settings.py  apps.py  auth.py  celery.py  models.py  settings.py  urls.py  views.py  wsgi.py
webquills/core/: __init__.py  admin.py  apps.py  blocks.py  commands.py  images.py  models.py  tasks.py  tests.py  views.py
webquills/core/fixtures/: creative_commons.json  test-copyrightable.json  test_copyrightable.json  test_users.json
webquills/core/migrations/: 0001_initial.py  0002_auto_20200222_2249.py  0002_auto_20210916_1454.py  0002_delete_sitemeta.py  0002_sitemeta.py  0003_articlepage_orig_published_at.py  0003_auto_20200223_1939.py  0003_auto_20210607_0644.py  0004_auto_20210403_1529.py  0005_articlepage_updated_at.py  0006_auto_20210403_2039.py  0007_auto_20210405_2023.py  0008_auto_20210405_2142.py  0009_auto_20210405_2148.py
webquills/isolation/: README.md  __init__.py  apps.py  tests.py  wagtail_hooks.py
webquills/linkmgr/: admin.py  apps.py  models.py  tests.py
webquills/sites/: README.md  actions.py  admin.py  apps.py  middleware.py  models.py  signals.py  test_actions.py  test_middleware.py  test_models.py  test_validators.py  test_views.py  tests.py  urls.py  validators.py  views.py
webquills/templates/: 429.html  base.html  index.html  profile.html
webquills/theme_bs4_2021/: __init__.py  admin.py  apps.py  context_processors.py  models.py  tests.py
webquills/themes/: __init__.py
wqcontent/: admin.py  apps.py  buildable_views.py  models.py  test_models.py  test_templatetags.py  test_views.py
wqcontent/migrations/: 0001_initial.py  0002_initial.py  0003_alter_article_options.py
wqcontent/templatetags/: webquills.py
wqlinklist/: admin.py  apps.py  models.py  tests.py
wqlinklist/fixtures/: test_linkmgr.json
wqlinklist/migrations/: 0001_initial.py
wqlinklist/templatetags/: links.py
(+86 files in other folders)
